<resources>
    <string name="app_name">B07 Demo Summer 2024</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_item">Delete Item</string>
    <string name="add_item">Add Item</string>
    <string name="back">Back</string>
    <string name="recyclerview">RecyclerView</string>
    <string name="scroller">Scroller</string>
    <string name="spinner">Spinner</string>
    <string name="manage_items">Manage Items</string>
    <string name="item_name">Item Name</string>
    <string name="key_word">Keyword</string>
    <string name="lot_number">Lot Number</string>
    <string name="add_new_item">Add New Item</string>
    <string name="category_label">Category</string>
    <string name="period_label">Period</string>
    <string name="description_label">Description</string>
    <string name="report_title">Generate Report</string>
    <string name="report_option">Generate report with description and picture only</string>
    <string name="generate">Generate</string>
    <string name="select_category">Select Category</string>
    <string name="select_period">Select Period</string>
    <string name="taam">TAAM</string>
    <string name="home">Home</string>
    <string name="view">View</string>
    <string name="search">Search</string>
    <string name="admin">Admin</string>
    <string name="login">Login</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="report">Report</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="exit_question">Do you want to exit the app?</string>

    <string-array name="categories_array">
        <item>Jade</item>
        <item>Paintings</item>
        <item>Calligraphy</item>
        <item>Rubbings</item>
        <item>Bronze</item>
        <item>Brass and Copper</item>
        <item>Gold and Silvers</item>
        <item>Lacquer</item>
        <item>Enamels</item>
    </string-array>

    <string-array name="period_array">
        <item>Xia</item>
        <item>Shang</item>
        <item>Zhou</item>
        <item>Chuanqiu</item>
        <item>Zhanggou</item>
        <item>Ji</item>
        <item>South and North</item>
        <item>Shui</item>
        <item>Tang</item>
        <item>Liao</item>
        <item>Song</item>
        <item>Jin</item>
        <item>Yuan</item>
        <item>Ming</item>
        <item>Qing</item>
        <item>Modern</item>
    </string-array>

    <string-array name="report_options">
        <item>Lot Number</item>
        <item>Name</item>
        <item>Category</item>
        <item>Period</item>
        <item>All Items</item>
    </string-array>

    <string-array name="admin_options">
        <item>Add</item>
        <item>Delete</item>
        <item>Report</item>
    </string-array>

</resources>